--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
             {{ site_name }}
        {% endblock %}
 </title>
-<meta name="keywords" content="{{ meta_keywords }}" />
-<meta name="description" content="{{ meta_description }}" />
+    <meta name="keywords" content="{{ meta_keywords }}" />
+    <meta name="description" content="{{ meta_description }}" />
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "css/dashboard.css" %}" rel="stylesheet">
     <!-- Placed at the end of the document so the pages load faster -->
@@ -27,7 +27,54 @@
     <![endif]-->
 </head> 
 <body>
-    {% block site_wrapper %} 
-    {% endblock %} 
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url 'catelog_home' %}">ModernBooks</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+               {% block navigation %}
+               {% endblock %}
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-4 col-sm-3 col-md-2 sidebar">
+            <ul class="nav nav-list">
+               <li class="nav-header"><strong>Find</strong></li>
+               <form>
+                 <label></label>
+                <li>
+                   <input class="search-query span10" type="text" name="suggestion" value="" id="suggestion"/>
+                </li>
+               </form>
+            </ul>
+            <div id="categories">
+            </div>
+            <br />
+            <br />
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h3 class="panel-title"> Categories </h3>
+                </div>
+            </div>
+            {% include 'tags/category_list.html' %}
+        </div>
+       <div class="col-xs-8 col-xs-offset-4 col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+           <div>
+                {% block content %}{% endblock %}
+           </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
