--- a/templates/tags/navigation.html
+++ b/templates/tags/navigation.html
@@ -1,3 +1,4 @@
+{% load catelog_tags %}
 <li><a href="{% url 'catelog_home' %}">Home</a></li> 
 <li class="dropdown">
     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Categories<span
@@ -11,3 +12,4 @@
 <li><a href="{% url 'catelog_home' %}">About</a></li>
 <li><a href="{% url 'catelog_home' %}">Privacy</a></li> 
 <li><a href="{% url 'catelog_home' %}">Contact</a></li>
+<li>{% cart_box request %} </li>
